--- a/index.html
+++ b/index.html
@@ -1,79 +1,94 @@
-  
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Professional Profolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Danial Al-Sabkies's Professional Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
     <header>
-        <h1>Danial Al-Sabkie</h1>
+        <h1>
+            <a>Danial Al-Sabkie</a>
+        </h1>
         <nav>
-          <ul>
-            <li>
-              <a href="#About-Me">About Me</a>
-            </li>
-            <li>
-              <a href="#Work">Work</a>
-            </li>
-            <li>
-              <a href="#Contact-Me">Contact Me</a>
-            </li>
-          
-          </ul>
+            <ul>
+                <li>
+                    <a href="#about">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact Me</a>
+                </li>
+            </ul>
         </nav>
-      </header>
+    </header>
 
- <div class="jumbotron ">
+    <section class="hero">
+        <h2>Portfolio</h2>
+    </section>
 
-    <div class="container">
+    <section class="sections">
+        <aside>
+            <h2 id="about" class="section-title">ABOUT ME</h2>
+        </aside>
+        <div class="about">
+            <div class="about-info">
+                <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure asperiores quod blanditiis, vero minima amet in officiis animi magnam nemo dolore labore, molestiae hic dignissimos reiciendis eum accusantium! Rem, earum.
+                </p>
+            </div>    
+        </div> 
+    </section>
 
-    </div>
+    <section class="sections">
+      <aside>
+          <h2 id="work" class="section-title">WORK</h2>
+      </aside>
+      <div class="work">
+          <a href="https://dalsabkie.github.io/run-buddy/" target="_blank" id="main-project" class="project">
+                <h3 class="project-title">RUN BUDDY</h3> 
+          </a>
+          <a href="#" target="_blank" class="project">
+                <h3 class="project-title">Coming Soon!</h3> 
+          </a>
+          <a href="#" target="_blank" class="project">
+                <h3 class="project-title">Coming Soon!</h3>
+          </a>
+          <a href="#" target="_blank" class="project">
+                <h3 class="project-title">Coming Soon!</h3>
+          </a>
+          <a href="#" target="_blank" class="project">
+                <h3 class="project-title">Coming Soon!</h3>
+          </a>
+      </div>
+  </section>
 
-<div>
-    <div id="about-me" class="about-me">
-     <h1 class="first" id="#About-me">About Me</h1>
-         <div class="vl"></div>
-            <p class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit esse deleniti saepe quidem possimus aperiam excepturi, placeat pariatur consequatur blanditiis exercitationem distinctio debitis totam autem laboriosam amet dolor necessitatibus ducimus?
-             </p>
+    <section class="sections">
+        <aside>
+            <h2 id="contact" class="section-title">CONTACT ME</h2>
+        </aside>
+        <div class="contact">
+            <p>
+                Phone: 555-555-5555
+            </p>
+            <p>
+                Email: <a href="mailto:alsabkied@gmail.com">alsabkied@gmail.com</a>
+            </p>
+            <p>
+                <a href="https://github.com/dalsabkie" target="_blank">GitHub</a>
+            </p>
+        </div>
+    </section>
 
-    <h1 class="second" id="work">Work</h1>
-        <div id="work" class="work">
-          <div class="vl2"></div>
-             <p class="content2">
-            <img src="Run-Buddy.jpg" height="300em" width="500px">
-      <h1 id="sub1">Run Buddy</h1>
-
-
-    </p>
-
-    <h1 class="third" id="contact">Contact Me</h1>
-        <div id="contact-me" class="contact-me">
-        <div class="vl3"></div>
-
-    <ul class="content3">
-
-        <li>414-248-9099</li>
-
-        <li>alsabkied@gmail.com</li>
-
-        <a href="https://github.com/Dalsabkie/professional-portfolio.git"><li>Github</li>
-
-    </ul>
-
-</div>
+    <footer>
+        <p>Developed by Danial Al-Sabkie</p>
+    </footer>
 
 </body>
 
 </html>
-      </section>
-    
-      </main>
-      <footer class="container text-center py-3">
-        <h3 class="text-dark">&copy; 2022 Danial Al-Sabkie</Inp></h3>
-      </footer>
-    </body>
-    </html>
